Fix devil/jar appears at offset, fly strange, takes bad position on shelf, never jumping, add caught jar anim, fix catch on table. Fix 2nd game crash.

--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -1,14 +1,20 @@
 Проблемы:
 * В меню зона с кнопкой стоп уезжает на полном экране.
 * В меню окна About и Settings тоже смещены на полном экране.
-* Дубли банок на полке
+* Банка с чёртиком появляется ближе тыквы к нам
+* Поимка не зависит от высоты
 * 
 
-Доделать:
+Доделать важно:
+* Картинки в меню!!!!!
 * Экран победы
 * Экран проигрыша
-* Обложка -> на итч
 * Звуки
+* Анимация банки когда чёртик прыгает
+* 
+
+Доделать желательно:
+* Обложка -> на итч
 * Текстуры
 * Смена карт (уровни)
 * Таблица рекордов
