Fix wrong devil jar location. Fix duplicate connection warnings. Make devils less aggressive.

--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -1,7 +1,6 @@
 Проблемы:
 * В меню зона с кнопкой стоп уезжает на полном экране.
 * В меню окна About и Settings тоже смещены на полном экране.
-* Банка с чёртиком появляется ближе тыквы к нам
 * Поимка не зависит от высоты
 * 
 
@@ -9,6 +8,7 @@
 * Картинки в меню!!!!!
 * Экран победы
 * Экран проигрыша
+* Управлять банкой с мыши (в какой трети экрана она)
 * Звуки
 * Анимация банки когда чёртик прыгает
 * 
