Menu improvements. Disable maximization of window.

--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -1,16 +1,15 @@
 Проблемы:
 * В меню зона с кнопкой стоп уезжает на полном экране.
 * В меню окна About и Settings тоже смещены на полном экране.
-* Поимка не зависит от высоты
 * 
 
 Доделать важно:
 * Картинки в меню!!!!!
 * Экран победы
 * Экран проигрыша
-* Управлять банкой с мыши (в какой трети экрана она)
+* Показывать имя уровня и отсчёт до начала при старте
 * Звуки
-* Анимация банки когда чёртик прыгает
+* Управлять банкой с мыши (в какой трети экрана она)
 * 
 
 Доделать желательно:
@@ -19,4 +18,6 @@
 * Смена карт (уровни)
 * Таблица рекордов
 * Музыка в игре
+* Добавить мебели, окно итд
+* Показывать имя чит кода
 * 
