--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -2,19 +2,36 @@
 * 
 
 Доделать важно:
-* Экран победы
-* Экран проигрыша
-* Показывать имя уровня и отсчёт до начала при старте
+* Подсчёт очков в игре
 * Звуки
+* Обложка -> на итч
+* Показывать имя уровня и отсчёт до начала при старте
 * 
 
 Доделать желательно:
-* Обложка -> на итч
-* Управлять банкой с мыши (в какой трети экрана она)
-* Текстуры
 * Смена карт (уровни)
+* Текстуры
 * Таблица рекордов
 * Музыка в игре
+* Музыка победы и поражения
 * Добавить мебели, окно итд
+* Управлять банкой с мыши (в какой трети экрана она)
 * Показывать имя чит кода
 * 
+
+Список звуков игры:
+[+] Меню - клик
+[+] Меню - ховер
+[ ] Чёрт - испуг при поимке
+[ ] Чёрт - лёгкий звон банки при прыжке
+[ ] Чёрт - какой-то звук когда дёргается
+[ ] Натали - шаг
+[ ] Натали - попытка поймать
+[ ] Тыква - трясётся (вселение)
+[ ] Тыква - укус
+
+Список музыки игры:
+[+] Меню
+[ ] Победа
+[ ] Проигрыш
+[ ] Сама игра
