Add sounds and music.

--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -2,14 +2,14 @@
 * 
 
 Доделать важно:
-* Подсчёт очков в игре
 * Звуки
+* Материалы вместо текстур
 * Обложка -> на итч
-* Показывать имя уровня и отсчёт до начала при старте
 * 
 
 Доделать желательно:
 * Смена карт (уровни)
+* Показывать имя уровня и отсчёт до начала при старте
 * Текстуры
 * Таблица рекордов
 * Музыка в игре
@@ -20,15 +20,15 @@
 * 
 
 Список звуков игры:
-[+] Меню - клик
-[+] Меню - ховер
-[ ] Чёрт - испуг при поимке
-[ ] Чёрт - лёгкий звон банки при прыжке
-[ ] Чёрт - какой-то звук когда дёргается
-[ ] Натали - шаг
-[ ] Натали - попытка поймать
-[ ] Тыква - трясётся (вселение)
-[ ] Тыква - укус
+[+][+] Меню - клик
+[+][+] Меню - ховер
+[+][+] Чёрт - испуг при поимке
+[+][+] Чёрт - лёгкий звон банки при прыжке
+[+][+] Чёрт - какой-то звук когда дёргается
+[+][+] Натали - шаг
+[ ][+] Натали - попытка поймать - звук ховера вполне норм
+[+][+] Тыква - трясётся (вселение)
+[+][+] Тыква - укус
 
 Список музыки игры:
 [+] Меню
