Add temporary materials. Add model UVs and re-export with correct pivots.

--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -2,12 +2,10 @@
 * 
 
 Доделать важно:
-* Материалы вместо текстур
 * Обложка -> на итч
 * 
 
 Доделать желательно:
-* Смена карт (уровни)
 * Показывать имя уровня и отсчёт до начала при старте
 * Текстуры
 * Таблица рекордов
@@ -31,6 +29,6 @@
 
 Список музыки игры:
 [+] Меню
-[ ] Победа
-[ ] Проигрыш
-[ ] Сама игра
+[-] Победа - то же что меню
+[+] Проигрыш
+[+] Сама игра
